log
do., 20 de abr. de 2025 23:24:03: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
eeef3b7
do., 20 de abr. de 2025 23:24:47: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
9c5f086
do., 20 de abr. de 2025 23:26:22: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
2a6690f
do., 20 de abr. de 2025 23:28:25: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
e8c36c0
do., 20 de abr. de 2025 23:29:15: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0b508fd
do., 20 de abr. de 2025 23:35:01: 
 hashmap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
b6bcb2d
do., 20 de abr. de 2025 23:38:57: 
 hashmap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
006fb2e
do., 20 de abr. de 2025 23:43:35: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
f407ea8
do., 20 de abr. de 2025 23:47:25: 
 hashmap.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 40/70
c069a95
do., 20 de abr. de 2025 23:48:20: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
5d8d73c
do., 20 de abr. de 2025 23:52:29: 
 hashmap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  12|2
total_score: 50/70
b7899d5
do., 20 de abr. de 2025 23:55:16: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|2
total_score: 50/70
ed1e504
do., 20 de abr. de 2025 23:55:52: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
bfc616c
lu., 21 de abr. de 2025  0:02:38: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:68:10: error: unused variable 'oldCapacity' [-Werror=unused-variable]
     long oldCapacity=map->capacity;
          ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
939823f
lu., 21 de abr. de 2025  0:03:17: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
fff25a4
